# hurt

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
config/: repo.bzl
demo/: BUILD.bazel
demo/eight_bit_computer/: BUILD.bazel  README.md  machine.v  pinmap_ice40_hx8k_evb.pcf
demo/eight_bit_computer/cpu6502/: BUILD.bazel  alu.v  control.v  regfile.v
demo/eight_bit_computer/ram/: BUILD.bazel
demo/eight_bit_computer/rom/: BUILD.bazel  rom.v
demo/eight_bit_computer/uart/: BUILD.bazel
demo/larsen/: BUILD.bazel  larsen.v  sim_main.cpp
fpga/: BUILD.bazel
fpga/lattice/: BUILD.bazel  constraints.bzl
hdl/: hdl.bzl
hdl/private/: BUILD.bazel  constraints.bzl  library.bzl  toolchain.bzl
release/: BUILD.bazel
simulator/: BUILD.bazel
tests/larsen/: BUILD.bazel
toolchains/verilator/: BUILD.bazel  implementation.bzl  repository.bzl
toolchains/yosys/: repository.bzl  yosys.bzl
toolchains/yosys/ecp5/: BUILD.bazel  implementation.bzl
toolchains/yosys/ice40/: BUILD.bazel  implementation.bzl
util/: release_in_container.sh  transition.bzl
verilog/: BUILD.bazel  verilog.bzl
verilog/private/: BUILD.bazel  library.bzl
