# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("@lowrisc_bazel_release//release:release.bzl", "release")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "REMOVE_BASE_DIRECTORY", "pkg_files")

pkg_files(
    name = "yosyshq",
    srcs = [
        "@icestorm_src//:gen_dir",
        "@nextpnr_src//:gen_dir",
        "@trellis_src//:gen_dir",
        "@yosys_src//:gen_dir",
    ],
    prefix = "yosyshq",
)

pkg_tar(
    name = "yosyshq-tools",
    srcs = [
        ":yosyshq",
    ],
    extension = "tar.xz",
)

release(
    name = "release",
    artifacts = {
    },
    env = {
        "BASE_URL": "https://github.com/cfrantz/hurt",
    },
    script = """(
        cd "${BUILD_WORKSPACE_DIRECTORY}"

        # TODO(cfrantz): update this for releasing tools binaries tied to
        # the release.

        # Apparently envsubst can't handle bash arrays or dicts.
        SHA256=${DIGEST[cc65-binaries.tar.xz]} envsubst \
                <toolchains/foo/repository.bzl.template \
                >toolchains/foo/repository.bzl

        # Update modified hashes.
        git commit -m "Update tags and hashes for ${RELEASE_TAG}" \
                toolchains/foo/repository.bzl

        # Move the tag after the commit.
        git tag -f "${RELEASE_TAG}"

        # Push the updated commit and tag to the remote.
        git push --atomic "${REMOTE}" "${BRANCH}" "${RELEASE_TAG}"
    )""",
)
