# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name="hurt")

load("//third_party/lowrisc:repos.bzl", "lowrisc_repos")
lowrisc_repos()
load("//third_party/lowrisc:deps.bzl", "lowrisc_deps")
lowrisc_deps()
