# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name="hurt")

load("//third_party/bazel:repos.bzl", "bazel_repos")
bazel_repos()
load("//third_party/bazel:deps.bzl", "bazel_deps")
bazel_deps()

load("//third_party/lowrisc:repos.bzl", "lowrisc_repos")
lowrisc_repos()
load("//third_party/lowrisc:deps.bzl", "lowrisc_deps")
lowrisc_deps()

load("//third_party/yosyshq:repos.bzl", "yosyshq_src_repos")
yosyshq_src_repos()
load("//third_party/verilator:repos.bzl", "verilator_src_repos")
verilator_src_repos()

# FIXME: delegate this to a deps file
load("//toolchains/yosys:repository.bzl", "yosyshq_repos")
yosyshq_repos()
load("//toolchains/verilator:repository.bzl", "verilator_repos")
verilator_repos()

# FIXME: delegate this to a deps file
register_toolchains("//toolchains/yosys/ice40:ice40")
register_toolchains("//toolchains/yosys/ecp5:ecp5")
register_toolchains("//toolchains/verilator:verilator")
