# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("//hdl/private:constraints.bzl", "hdl_constraints")

package(default_visibility = ["//visibility:public"])

constraint_setting(name = "simulator")

constraint_value(
    name = "verilator",
    constraint_setting = ":simulator",
)

platform(
    name = "verilated",
    constraint_values = [
        ":verilator",
        # TODO(cfrantz): is there a way to automatically take on whichever
        # values are the current host platform?
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

hdl_constraints(
    name = "default",
)
