# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

exports_files(
    glob(["*.bzl"]),
    visibility = [
        "//fpga:__subpackages__",
        "//hdl:__pkg__",
        "//toolchains:__subpackages__",
    ],
)
