# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("//verilog:verilog.bzl", "verilog_bitstream")
load("//fpga/lattice:constraints.bzl", "ecp5_constraints", "ice40_constraints")

ice40_constraints(
    name = "ice40",
    device = "hx8k",
    package = "ct256",
    pcf = "pinmap_ice40_hx8k_evb.pcf",
)

ecp5_constraints(
    name = "ecp5",
    device = "um5g-85k",
    lpf = "pinmap_lattice_ecp5_evb.lpf",
    package = "CABGA381",
)

verilog_bitstream(
    name = "larsen",
    srcs = ["larsen.v"],
    constraints = select({
        "//fpga/lattice:ice40": ":ice40",
        "//fpga/lattice:ecp5": ":ecp5",
    }),
    top = "top",
)
