# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("//hdl:hdl.bzl", "hdl_library")

hdl_library(
    name = "cpu6502",
    srcs = [
        "alu.v",
        "control.v",
        "cpu.v",
        "regfile.v",
    ],
    hdrs = [
        "alu.vh",
        "regfile.vh",
    ],
)
