# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("//hdl:hdl.bzl", "hdl_library")

hdl_library(
    name = "rom",
    srcs = [
        "rom.v",
    ],
)
