# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("//hdl/private:toolchain.bzl", "HDL_TOOLCHAIN", "hdl_tool", "hdl_toolchain")
load(":implementation.bzl", "yosys_ecp5_helper")

yosys_ecp5_helper(
    name = "helper",
)

hdl_tool(
    name = "yosys",
    binary = "@yosyshq//:yosys_bin",
    deps = ["@yosyshq//:yosys_files"],
)

hdl_tool(
    name = "nextpnr",
    binary = "@yosyshq//:nextpnr_ecp5",
)

hdl_tool(
    name = "ecppack",
    binary = "@yosyshq//:ecppack_bin",
    deps = ["@yosyshq//:ecp5_files"],
)

hdl_toolchain(
    name = "ecp5_impl",
    helper = ":helper",
    tools = [
        ":ecppack",
        ":nextpnr",
        ":yosys",
    ],
)

toolchain(
    name = "ecp5",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "//fpga/lattice:ecp5",
    ],
    toolchain = ":ecp5_impl",
    toolchain_type = HDL_TOOLCHAIN,
)
