# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

load("//hdl/private:toolchain.bzl", "HDL_TOOLCHAIN", "hdl_tool", "hdl_toolchain")
load(":implementation.bzl", "yosys_ice40_helper")

yosys_ice40_helper(
    name = "helper",
)

hdl_tool(
    name = "yosys",
    binary = "@yosyshq//:yosys_bin",
    deps = ["@yosyshq//:yosys_files"],
)

hdl_tool(
    name = "nextpnr",
    binary = "@yosyshq//:nextpnr_ice40",
)

hdl_tool(
    name = "icepack",
    binary = "@yosyshq//:icepack_bin",
    deps = ["@yosyshq//:icestorm_files"],
)

hdl_toolchain(
    name = "ice40_impl",
    helper = ":helper",
    tools = [
        ":icepack",
        ":nextpnr",
        ":yosys",
    ],
)

toolchain(
    name = "ice40",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "//fpga/lattice:ice40",
    ],
    toolchain = ":ice40_impl",
    toolchain_type = HDL_TOOLCHAIN,
)
